--- a/styles/login_style.css
+++ b/styles/login_style.css
@@ -26,7 +26,7 @@ header {
     font-weight: 700;
     font-size: 14px;
 }
-#feedback {
+#login {
     color: #e4c2ff;
 }
 a {
@@ -55,14 +55,13 @@ a:before {
     -webkit-transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 200ms;
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
-.background-fb {
-    background-image: url(bg_1.jpg);
+.background-login {
+    background-image: url(../pictures/light_wall.jpg);
     height: 88vh;
     background-repeat: round;
-    background-size: 30%;
-    margin-bottom: -45px; 
+    background-size: 100%;
 }
-.container-fb-form {
+.container-login-form {
     margin: 0 30%;
     padding-left: 0px;
     padding-top: 0px;
@@ -72,17 +71,12 @@ a:before {
     position:relative;
     text-align: center;
 }
-.elements-fb {
+.elements-login {
     text-align: left;
-    color: black;
     padding-left: 20px;
     font-size: 14px;
     padding-bottom: 5px;
-    line-height: 1.5;
-    padding-top: 5px;
-}
-.from-where, .appeal-text {
-    line-height: 0.3em;
+    padding-top: 20px;
 }
 .buttons {
     text-align: center;
@@ -156,6 +150,6 @@ footer {
     font-weight: 700;
     font-size: 14px;
     position: relative;
-    right: -410px;   
+    right: -410px;
     object-position: center;
 }
