--- a/styles/8lab.css
+++ b/styles/8lab.css
@@ -51,7 +51,7 @@ body {
 }
 
 .upvotes {
-    background-image: url('upvote_white.png');
+    background-image: url('../pictures/upvote_white.png');
     background-position: left;
     background-size: contain;
     background-repeat: no-repeat;
