--- a/styles/in_10lab_result.css
+++ b/styles/in_10lab_result.css
@@ -1,13 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    color: black;
     overflow: hidden;
-    background-color: #2D0051;
 }
-.header {
+header {
     margin: 0px;
-    margin-bottom: -22px;
+    margin-bottom: 0;
+    background-color: #2D0051;
 }
 .container {
     margin: 0px;   
@@ -26,6 +26,9 @@ body {
     vertical-align: text-bottom;
     font-weight: 700;
     font-size: 14px;
+}
+#text_analysis {
+    color: #e4c2ff;
 }
 a {
     color: #fff;
@@ -53,62 +56,54 @@ a:before {
     -webkit-transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 200ms;
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
-.background-fb {
-    background-image: url(bg_1.jpg);
+.background {
+    background-image: url(../pictures/bg_2.png);
     height: 88vh;
     background-repeat: round;
-    background-size: 30%;
-    margin-bottom: -45px; 
+    background-size: 100%;
 }
-.container-fb-form {
-    margin: 0 30%;
-    padding-left: 0px;
-    padding-top: 0px;
-    background-color: #e4c2ff;
+.bg-elements {
     background-size: cover;
+    height: fit-content;
     width: 40%;
     position:relative;
     text-align: center;
 }
-.name-fb {
-    padding-bottom: -40px;
+.form_result_name {
+    font-family: 'Dancing Script', cursive;
+    font-size: 38px;
+    position: absolute; 
+    left: 730px;
+    text-align: center;
+    top: 00px;
 }
-.elements-fb {
+.elements-result {
     text-align: left;
-    color: black;
     padding-left: 20px;
     font-size: 14px;
     padding-bottom: 5px;
-    line-height: 1.5;
-    padding-top: 5px;
-}
-.hello-fb {
-    text-decoration: none;
-    color: black;
-    font-weight: 500;
-    font-size: 16px;
+    padding-top: 10px;
     position: relative;
-    text-align: center;
+    top: 80px;
 }
-.rewrite-fb {
-    color: black;
-    font-weight: 500;
-    font-size: 14px;
-    text-decoration: underline;
+.text-itself {
+    border: 1px solid #2D0051;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 26px;
     position: relative;
-    padding-left: 210px;
+    left: 40px;
 }
-.from-where, .appeal-text {
-    line-height: 0.3em;
-}
-.send-button {
-    text-align: center;
-}
-.footer {
+footer {
+    background-color: #2D0051;
     margin-top: 5px;
+    position: absolute;
+    top: 708px;
+    bottom: 0px;
+    height: 40px;
+    width: 100%;
 }
 .down-line {
-    height: 0.2vh;
+    height: 3vh;
     padding-top: 36px;
     display: flex;
     align-items: center;
@@ -119,8 +114,8 @@ a:before {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    position: relative;
-    bottom: -2px;
+    position: absolute;
+    bottom: 12px;
     vertical-align: middle;
 }
 .my-name {
@@ -167,6 +162,6 @@ a:before {
     font-weight: 700;
     font-size: 14px;
     position: relative;
-    right: -410px;   
+    right: -410px;
     object-position: center;
 }
