--- a/styles/in_7lab.css
+++ b/styles/in_7lab.css
@@ -58,7 +58,7 @@ a:before {
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
 .elements {
-    background-image: url(bg_1.jpg);
+    background-image: url(../pictures/bg_1_1.jpg);
     height: 97vh;
     background-repeat: round;
     background-size: 30%;
