--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
-    display: flex;
 }
 header {
     background-color: #2D0051;
@@ -29,7 +28,7 @@ header {
     font-weight: 700;
     font-size: 14px;
 }
-#functions {
+#homepage {
     color: #e4c2ff;
 }
 a {
@@ -58,84 +57,39 @@ a:before {
     -webkit-transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 200ms;
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
-.elements {
-    background-image: url(bg_1.jpg);
+main {
+    background-image: url(../pictures/bg_1.jpg);
     height: 97vh;
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -45px;
 }
-#key_again {
-    width: 100px;
-    height: 50px;
+.text-desc {
+    padding-left: 10px;
+    padding-right: 10px;
     position: absolute;
-    top: 310px;
-    left: 480px;
-    transform: rotate(-5deg);
-    border: 2px #2D0051;
-    cursor: pointer;
+    left: 10%;
+    top: 14%;
+    background-color: #2D0051;
+    color: #e4c2ff;
 }
-/*
-* {
-    box-sizing: border-box;
-    &::before, &::after {
-      box-sizing: border-box;
-    }
-}
-.button {
-    display: inline-block;
-    outline: none;
-    border: 0;
-    vertical-align: middle;
-    text-decoration: none;
-    &.key_again {
-        font-weight: 600;
-        color: #382b22;
-        text-transform: uppercase;
-        padding: 1.25em 2em;
-        background: #fff0f0;
-        border: 2px solid #b18597;
-        border-radius: 0.75em;
-        transform-style: preserve-3d;
-        transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-        &::before {
-        position: absolute;
-        content: '';
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: #f9c4d2;
-        border-radius: inherit;
-        box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
-        transform: translate3d(0, 0.75em, -1em);
-        transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-        }
-        &:hover {
-        background: #ffe9e9;
-        transform: translate(0, 0.25em);
-        &::before {
-            box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
-            transform: translate3d(0, 0.5em, -1em);
-        }
-        }
-        &:active {
-        background: #ffe9e9;
-        transform: translate(0em, 0.75em);
-        &::before {
-            box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
-            transform: translate3d(0, 0, -1em);
-        }
-    }
-  }
-}
-*/
-.congrats_pic {
+.pictures-hp {
     position: absolute;
-    top: 120px;
-    left: 200px;
+    /*top: 400px;*/
+    top: 20%;
+    left: 43%;
+    transform: rotate(-30deg)
+}
+.list {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    position: absolute;
+    top: 14%;
+    right: 4.5%;
+    background-color: #2D0051;
+    color: #e4c2ff;
 }
 footer {
     background-color: #2D0051;
@@ -207,6 +161,5 @@ footer {
     font-size: 14px;
     position: relative;
     right: -410px;
-    
     object-position: center;
 }
