--- a/styles/in_10lab.css
+++ b/styles/in_10lab.css
@@ -6,8 +6,15 @@ body {
 }
 header {
     margin: 0px;
-    margin-bottom: 0;
+    margin-bottom: -22px;
     background-color: #2D0051;
+    height: 100px;
+}
+#multti {
+    color: #e4c2ff;
+    position: absolute;
+    top: 32px;
+    left: 0px;
 }
 .container {
     margin: 0px;   
