--- a/styles/achievements_style.css
+++ b/styles/achievements_style.css
@@ -8,11 +8,16 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 header {
-    background-color: #2D0051;
-    height: 50px;
-    width: 100%;
-    position: absolute;
     margin: 0px;
+    margin-bottom: -22px;
+    background-color: #2D0051;
+    height: 100px;
+}
+#multti {
+    color: #e4c2ff;
+    position: absolute;
+    top: 32px;
+    left: 0px;
 }
 .container {
     margin: 0px;   
