--- a/styles/in_10lab_result.css
+++ b/styles/in_10lab_result.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
 body {
     margin: 0;
+    padding: 0;
     font-family: 'Open Sans', sans-serif;
     /*overflow: hidden;*/
+    border-bottom-style: none;
 }
 header {
     margin: 0px;
@@ -57,9 +59,10 @@ a:before {
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
 .background {
-    background-image: url(../pictures/bg_2.png);
-    height: 88vh;
-    background-repeat: round;
+    /*background-image: url(../pictures/bg_2.png);*/
+    background: linear-gradient(to top, #8993ff, #ffffff);
+    height: 225vh;
+    background-attachment: fixed;
     background-size: 100%;
 }
 .bg-elements {
@@ -68,6 +71,7 @@ a:before {
     width: 40%;
     position:relative;
     text-align: center;
+    border-bottom-style: none;
 }
 .form_result_name {
     font-family: 'Dancing Script', cursive;
@@ -93,6 +97,7 @@ a:before {
     position: relative;
     left: 40px;
     width: 240%;
+    margin-bottom: 50px;
 }
 /*
 .text-itself:hover {
@@ -106,14 +111,43 @@ a:before {
     left: 200px;
     top: 60px;
 }
+a.analysis_again {
+    text-align:center;
+    font-size:13px;
+    text-decoration: none;
+    font-weight: 700;
+    padding: 3px 6px;
+    background: #eaeef1;
+    position: absolute;
+    left: 900px;
+    top: 20px;
+    display:block;
+    width:90px;
+    margin: 20px auto;
+    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.1));
+    border-radius: 3px;
+    color: rgba(0,0,0,.6);
+    text-shadow: 0 1px 1px rgba(255,255,255,.7);
+    box-shadow: 0 0 0 1px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2), inset 0 1px 2px rgba(255,255,255,.7);
+}
+
+a.analysis_again:hover, a.analysis_again.hover {
+    background: #fff;
+}
+a.analysis_again:active, a.analysis_again.active {
+    background: #d0d3d6;
+    background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0));
+    box-shadow: inset 0 0 2px rgba(0,0,0,.2), inset 0 2px 5px rgba(0,0,0,.2), 0 1px rgba(255,255,255,.2);
+}
 footer {
     background-color: #2D0051;
     margin-top: 5px;
     position: absolute;
-    top: 1708px;
+    top: 1700px;
     bottom: 0px;
     height: 40px;
     width: 100%;
+    border-bottom-style: none;
 }
 .down-line {
     height: 3vh;
