--- a/styles/in_10lab_result.css
+++ b/styles/in_10lab_result.css
@@ -99,6 +99,12 @@ a:before {
     width: 240%;
     margin-bottom: 50px;
 }
+.words_list {
+    margin-left: 40px;
+    margin-top: 5px;
+    margin-bottom: -10px;
+    color: #2D0051;
+}
 /*
 .text-itself:hover {
     border: 1px solid #8b10ef;
